--- a/demos/Thoth.Elmish.Demo/Thoth.Elmish.Demo.fsproj
+++ b/demos/Thoth.Elmish.Demo/Thoth.Elmish.Demo.fsproj
@@ -4,8 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="src/Debouncer.fs" />
-    <Compile Include="src/App.fs" />
+    <!-- <Compile Include="src/Debouncer.fs" /> -->
+    <Compile Include="src/Toast.fs" />
+    <!-- <Compile Include="src/App.fs" /> -->
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="../../src/Thoth.Elmish.Toast/Thoth.Elmish.Toast.fsproj" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
